// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`create new game can't create a new game with score limit set as number < 1 1`] = `
Object {
  "data": Object {
    "gameCreateGameWithScoreLimitEndingCondition": Object {
      "type": "SCORE_LIMIT_CANT_BE_LESS_THAN_ONE",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`create new game can't create a new game with x times being storyteller set as number < 1 1`] = `
Object {
  "data": Object {
    "gameCreateGameWithXtimesStorytellerEndingCondition": Object {
      "type": "X_TIMES_STORYTELLER_CANT_BE_LESS_THAN_ONE",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`create new game creates a new game 1`] = `
Object {
  "data": Object {
    "gameCreateGame": Object {
      "game": Object {
        "endCondition": Object {
          "remainingTurns": 0,
        },
        "host": Object {
          "id": "p1",
          "name": "player1",
        },
        "id": "g1",
      },
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`create new game creates a new game with score limit as end condition 1`] = `
Object {
  "data": Object {
    "gameCreateGameWithScoreLimitEndingCondition": Object {
      "game": Object {
        "endCondition": Object {
          "scoreLimit": 30,
        },
        "host": Object {
          "id": "p1",
          "name": "player1",
        },
        "id": "g1",
      },
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`create new game creates a new game with x times being storyteller as end condition 1`] = `
Object {
  "data": Object {
    "gameCreateGameWithXtimesStorytellerEndingCondition": Object {
      "game": Object {
        "endCondition": Object {
          "remainingTurns": 4,
        },
        "host": Object {
          "id": "p1",
          "name": "player1",
        },
        "id": "g1",
      },
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
